--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "backbonesowcase",
-    "version": "1.0.2",
+    "name": "backbone-marionette-boilerplate",
+    "version": "0.0.2",
     "dependencies": {},
     "devDependencies": {
         "grunt": "~0.4.0",
