--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,19 @@
 {
-    "name": "skeleton",
-    "private": true,
-    "dependencies": {
-        "bootstrap-sass-official": "~3.1.0",
-        "modernizr": "~2.6.2",
-        "jquery": "~1.11.0",
-        "lodash": "~2.4.1",
-        "almond": "~0.2.9",
-        "requirejs": "~2.1.14",
-        "requirejs-text": "~2.0.12",
-        "backbone": "~1.1.2",
-        "velocity": "~1.2.2",
-        "backbone-validation": "~0.9.1",
-        "swiper": "~3.0.4",
-        "svg-injector": "~1.1.2"
-    }
+  "name": "App",
+  "private": true,
+  "dependencies": {
+    "bootstrap-sass-official": "~3.3.4",
+    "modernizr": "~2.6.2",
+    "jquery": "~1.11.0",
+    "lodash": "~2.4.1",
+    "almond": "~0.2.9",
+    "requirejs": "~2.1.14",
+    "requirejs-text": "~2.0.12",
+    "backbone": "~1.1.2",
+    "velocity": "~1.2.2",
+    "backbone-validation": "~0.9.1",
+    "swiper": "~3.0.4",
+    "svg-injector": "~1.1.2",
+    "jquery.parallaxify": "*"
+  }
 }
