--- a/app/assets/scripts/projects.json
+++ b/app/assets/scripts/projects.json
@@ -2,19 +2,19 @@
   {
     "title": "Project One",
     "name": "project-1",
-    "url": "/work/project-1",
+    "url": "/projects/project-1",
     "content": ""
   },
   {
     "title": "Project Two",
     "name": "project-2",
-    "url": "/work/project-2",
+    "url": "/projects/project-2",
     "content": ""
   },
   {
     "title": "Project Three",
     "name": "project-3",
-    "url": "/work/project-3",
+    "url": "/projects/project-3",
     "content": ""
   }
 ]
