--- a/bower.json
+++ b/bower.json
@@ -12,9 +12,9 @@
     "backbone": "~1.1.2",
     "backbone-validation": "~0.9.1",
     "svg-injector": "~1.1.2",
-    "jquery.parallaxify": "*",
     "ScrollMagic": "~2.0.5",
     "greensock": "~1.16.1",
-    "paralaxJS": "~2.1.3"
+    "paralaxJS": "~2.1.3",
+    "nprogress": "~0.2.0"
   }
 }
