--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "ScrollMagic": "~2.0.5",
     "greensock": "~1.16.1",
     "paralaxJS": "~2.1.3",
-    "nprogress": "~0.2.0"
+    "nprogress": "~0.2.0",
+    "marionette": "~2.4.1"
   }
 }
